tests/integration/tests/di/ui/fail/injectable_factory_non_inject_params.stderr
error: #[injectable] provider functions must have all parameters marked with #[inject]. Non-inject parameters are not supported because the generated wrapper function only receives an InjectionContext.
  --> tests/di/ui/fail/injectable_factory_non_inject_params.rs:17:1
   |
17 | async fn make_service(name: String) -> FactoryOutput<MyServiceKey, MyService> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
